k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-backend
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-backend
  template:
    metadata:
      labels:
        app: notes-backend
    spec:
      containers:
        - name: backend
          image: mariosek1/notes-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
