k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-frontend
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-frontend
  template:
    metadata:
      labels:
        app: notes-frontend
    spec:
      containers:
        - name: frontend
          image: mariosek1/notes-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
