k8s/db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: notes-app
spec:
  ports:
    - port: 5432
  clusterIP: None
  selector:
    app: postgres
